[package]
name = "rdma-playground"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [ "Mike Panetta <panetta.mike@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async-rdma = "0.4.0"
tokio-graceful-shutdown = "0.13.0"
tokio-console = "0.1.8"
tokio-metrics = "0.2.2"
tracing-subscriber = "0.3.17"
clap_derive = "4.3.2"
tonic = "0.9.2"
prost = "0.11.9"
tonic-health = "0.9.2"
tonic-reflection = "0.9.2"
tonic-types = "0.9.2"
figment = { version = "0.10.10", features = ["env", "json", "serde_json", "serde_yaml", "toml", "yaml"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
uri = "0.4.0"
sha2 = { version = "0.10.7", features = ["asm"] }
bincode = { version = "1.3.3", features = ["i128"] }
toml = "0.7.6"
mmap-rs = "0.6.0"

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tracing]
version  = "0.1.37"
features = ["max_level_debug"]

[dependencies.clap]
version = "4.3.10"
features = ["derive"]

[dependencies.async-rdma]
git = "https://github.com/datenlord/async-rdma.git"
commit = "8cb9e977b42c97327af19d0785f7c26c9f8d2c56"
#git = "https://github.com/bentwire/async-rdma.git"
#branch = "update-hex-simd"

[build-dependencies]
tonic-build = "0.9.2"

[package.metadata.deb]
#maintainer = ""
#copyright = ""
#license-file = ["LICENSE", "4"]
extended-description = """\
Some suff"""
depends = "$auto"
#section = "utility"
#priority = "optional"
assets = [
    ["target/release/rdma-playground", "usr/bin/", "755"],
#    ["Rocket.toml", "usr/share/consul-zq/", "644"],
#    ["templates/**/*", "usr/share/consul-zq/templates/", "644"],
#    ["static/**/*", "usr/share/consul-zq/static/", "644"],
]
#maintainer-scripts = "debian"

[package.metadata.deb.systemd-units]
unit-name = "epc-gateway"

#[[bin]]
#name = "server"
#path = "src/grpc_server.rs"

#[[bin]]
#name = "client"
#path = "src/grpc_client.rs"
